<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Metro</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="donglai">Đóng lại</string>
    <string name="chon">Chọn</string>
    <string name="boqua">Bỏ qua</string>
    <string name="dangnhap">ĐĂNG NHẬP</string>
    <string name="chongtrungtammetro">Chọn trung tâm Metro</string>
    <string name="chonnganhkinhdoanh">Chọn ngành hàng kinh doanh</string>
    <string name="trungtammetro">Trung Tâm METRO</string>
    <string name="nganhhang">Ngành Hàng</string>
    
    <string name="close">close</string>
    <string name="metro">METRO</string>
    <string name="healthy">HEALTHY</string>
    
    <string name="thongtinduan">Thông tin dự án</string>
    <string name="doitacthuchien">Đối tác thực hiện</string>
    <string name="hoatdong">Hoạt động</string>
    <string name="gioithieu">GIỚI THIỆU</string>
    <string name="taitro">TÀI TRỢ</string>
    <string name="tailieu">Tài liệu</string>
    <string name="lienhe">Liên hệ</string>
    <string name="hintmanganh">Nhập mã ngành</string>
    
    <string name="metrocash">Metro Cash</string>
    <string name="taphoa">Nganh Hang 1</string>
    <string name="ex_anphu">AN PHÚ (TỪ 23/9/2013 ĐẾN 29/4/2014)  GIÁ BÁN (VND) GỒM THUẾ</string>
    <string name="mitomcuacay">Mì tôm chua cay 75g</string>
    <string name="dieukien">(Điều kiện KH mua 2 lốc)</string>
    
    <string name="textgiamgia">GIẢM</string>
    <string name="giamgia">17.776Đ</string>
    <string name="gia19">14.900Đ</string>
    <string name="gtgt">-GTGT   13.500 Đ/Lốc</string>
    <string name="donvidong">Đ</string>

    <string name="matketnoi">Mất kết nối, vui lòng thử lại</string>
</resources>