<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_playlist"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="3dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/sanpham_fragment_item_img"
                android:layout_width="130dp"
                android:layout_height="145dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/img_sanpham"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/sanpham_fragment_item_icon_giamgia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_giam" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sanpham_fragment_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mitomcuacay"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sanpham_fragment_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dieukien"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sanpham_fragment_item_giamphantram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/textgiamgia"
                android:textColor="@color/bg_blue"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sanpham_fragment_item_price1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/giamgia"
                android:textColor="@color/bg_blue"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sanpham_fragment_item_price2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/gia19"
                android:textColor="@color/red"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sanpham_fragment_item_price_vat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/gtgt"
                android:textColor="@color/bg_blue"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>