<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue"
    tools:context=".SplashActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_metro" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/copywright" />

    <LinearLayout
        android:id="@+id/dangnhap_linear_content"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chongtrungtammetro"
            android:textColor="@color/white"
            android:textSize="@dimen/dangnhap_title_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dangnhap_tx_list_trungtam"
            android:layout_width="@dimen/dangnhap_item_w"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:drawableRight="@drawable/arrow_down"
            android:padding="3dp"
            android:text="@string/metrocash"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/chonnganhkinhdoanh"
            android:textColor="@color/white"
            android:textSize="@dimen/dangnhap_title_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dangnhap_tx_list_nganh"
            android:layout_width="@dimen/dangnhap_item_w"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:drawableRight="@drawable/arrow_down"
            android:padding="3dp"
            android:text="@string/taphoa"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/dangnhap_bnt_dangnhap"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/yellow"
            android:gravity="center"
            android:text="@string/chon"
            android:textColor="@color/bg_blue"
            android:textStyle="bold" />
    </LinearLayout>

    <com.app.customui.CustomLoading
        android:id="@+id/dangnhap_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@anim/sapi_loading_blue" />

</RelativeLayout>